-- Licensed to the Apache Software Foundation (ASF) under one
-- or more contributor license agreements.  See the NOTICE file
-- distributed with this work for additional information
-- regarding copyright ownership.  The ASF licenses this file
-- to you under the Apache License, Version 2.0 (the
-- "License"); you may not use this file except in compliance
-- with the License.  You may obtain a copy of the License at
--
--   http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing,
-- software distributed under the License is distributed on an
-- "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-- KIND, either express or implied.  See the License for the
-- specific language governing permissions and limitations
-- under the License.

cabal-version:      2.0
name:               opendal-hs
version:            0.1.0.0
license:            Apache-2.0
synopsis:           OpenDAL Haskell Binding
description:
    OpenDAL Haskell Binding. Open Data Access Layer: Access data freely, painlessly, and efficiently
category:           Storage, Binding
build-type:         Simple

source-repository head
    type:     git
    location: https://github.com/apache/incubator-opendal

library
    exposed-modules:
        OpenDAL
    other-modules:
        OpenDAL.FFI
    hs-source-dirs:   haskell-src
    default-language: Haskell2010
    extra-libraries:  opendal_hs
    ghc-options:      -Wall
    build-depends:
        base >=4.10.0.0 && <5,
        unordered-containers >=0.2.0.0, 
        bytestring >=0.11.0.0,
        mtl >=2.2.0.0,
        time >=1.10.0.0,
        co-log >=0.3.0.0,
        text >=2.0.0.0

test-suite opendal-hs-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    BasicTest
    hs-source-dirs:   test
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    ghc-options:      -Wall
    build-depends:    
        base,
        opendal-hs,
        tasty,
        tasty-hunit,
        co-log,
        text