cabal-version:      2.2
-- Licensed to the Apache Software Foundation (ASF) under one
-- or more contributor license agreements.  See the NOTICE file
-- distributed with this work for additional information
-- regarding copyright ownership.  The ASF licenses this file
-- to you under the Apache License, Version 2.0 (the
-- "License"); you may not use this file except in compliance
-- with the License.  You may obtain a copy of the License at
--
--   http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing,
-- software distributed under the License is distributed on an
-- "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-- KIND, either express or implied.  See the License for the
-- specific language governing permissions and limitations
-- under the License.

name:               opendal-hs
version:            0.1.0.0
license:            Apache-2.0
synopsis:           OpenDAL Haskell Binding
description:
    OpenDAL Haskell Binding. Open Data Access Layer: Access data freely, painlessly, and efficiently
category:           Storage, Binding
build-type:         Simple

source-repository head
    type:     git
    location: https://github.com/apache/incubator-opendal

common base
    ghc-options:      -Wall
    build-depends:
        base >=4.10 && <4.17,
        unordered-containers >=0.2,
        bytestring >=0.11,
        mtl >=2.2,
        time >=1.10,
        co-log >=0.5,
        text >=2
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings,
        ForeignFunctionInterface,
        DerivingStrategies,
        GeneralizedNewtypeDeriving,
        LambdaCase

library
    import:           base
    extra-libraries:  opendal_hs
    exposed-modules:
        OpenDAL
    other-modules:
        OpenDAL.FFI
    hs-source-dirs:   haskell-src

test-suite opendal-hs-test
    import:           base
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    BasicTest
    hs-source-dirs:   test
    build-depends:    
        opendal-hs,
        tasty,
        tasty-hunit