# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "opendal-java"
publish = false

authors = ["Apache OpenDAL <dev@opendal.apache.org>"]
edition = "2024"
homepage = "https://opendal.apache.org/"
license = "Apache-2.0"
repository = "https://github.com/apache/opendal"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]
doc = false

[features]
default = [
  "services-azblob",
  "services-azdls",
  "services-cos",
  "services-fs",
  "services-gcs",
  "services-ghac",
  "services-http",
  "services-ipmfs",
  "services-memory",
  "services-obs",
  "services-oss",
  "services-s3",
  "services-webdav",
  "services-webhdfs",
  "layers-mime-guess",
  "layers-throttle",
  "layers-timeout",
]

services-all = [
  "default",
  "services-aliyun-drive",
  "services-cacache",
  "services-dashmap",
  "services-dropbox",
  "services-etcd",
  # FIXME this requires a preinstalled fdb library
  # "services-foundationdb",
  # FIXME requires openssl.
  # "services-ftp",
  "services-gdrive",
  # FIXME how to support HDFS services in bindings?
  # "services-hdfs",
  # "services-hdfs-native",
  "services-hf",
  "services-ipfs",
  "services-memcached",
  "services-mini-moka",
  "services-moka",
  "services-onedrive",
  "services-persy",
  "services-postgresql",
  "services-koofr",
  "services-mysql",
  "services-redb",
  "services-redis",
  # FIXME: rocksdb will lead to "cannot allocate memory in static TLS block" while linking.
  # "services-rocksdb",
  "services-sled",
  "services-tikv",
  "services-vercel-artifacts",
  "services-mongodb",
  "services-gridfs",
  "services-sqlite",
  "services-azfile",
  "services-swift",
  "services-alluxio",
  "services-b2",
  "services-seafile",
  "services-upyun",
  "services-yandex-disk",
]

# Optional services provided by opendal.
services-aliyun-drive = ["opendal/services-aliyun-drive"]
services-alluxio = ["opendal/services-alluxio"]
services-azblob = ["opendal/services-azblob"]
services-azdls = ["opendal/services-azdls"]
services-azfile = ["opendal/services-azfile"]
services-b2 = ["opendal/services-b2"]
services-cacache = ["opendal/services-cacache"]
services-cloudflare-kv = ["opendal/services-cloudflare-kv"]
services-compfs = ["opendal/services-compfs"]
services-cos = ["opendal/services-cos"]
services-dashmap = ["opendal/services-dashmap"]
services-dbfs = ["opendal/services-dbfs"]
services-dropbox = ["opendal/services-dropbox"]
services-etcd = ["opendal/services-etcd"]
services-foundationdb = ["opendal/services-foundationdb"]
services-fs = ["opendal/services-fs"]
services-ftp = ["opendal/services-ftp"]
services-gcs = ["opendal/services-gcs"]
services-gdrive = ["opendal/services-gdrive"]
services-ghac = ["opendal/services-ghac"]
services-github = ["opendal/services-github"]
services-gridfs = ["opendal/services-gridfs"]
services-hdfs = ["opendal/services-hdfs"]
services-hdfs-native = ["opendal/services-hdfs-native"]
services-hf = ["opendal/services-hf"]
services-http = ["opendal/services-http"]
services-huggingface = ["services-hf"]
services-ipfs = ["opendal/services-ipfs"]
services-ipmfs = ["opendal/services-ipmfs"]
services-koofr = ["opendal/services-koofr"]
services-lakefs = ["opendal/services-lakefs"]
services-memcached = ["opendal/services-memcached"]
services-memory = ["opendal/services-memory"]
services-mini-moka = ["opendal/services-mini-moka"]
services-moka = ["opendal/services-moka"]
services-mongodb = ["opendal/services-mongodb"]
services-monoiofs = ["opendal/services-monoiofs"]
services-mysql = ["opendal/services-mysql"]
services-obs = ["opendal/services-obs"]
services-onedrive = ["opendal/services-onedrive"]
services-oss = ["opendal/services-oss"]
services-pcloud = ["opendal/services-pcloud"]
services-persy = ["opendal/services-persy"]
services-postgresql = ["opendal/services-postgresql"]
services-redb = ["opendal/services-redb"]
services-redis = ["opendal/services-redis"]
services-rocksdb = ["opendal/services-rocksdb"]
services-s3 = ["opendal/services-s3"]
services-seafile = ["opendal/services-seafile"]
services-sftp = ["opendal/services-sftp"]
services-sled = ["opendal/services-sled"]
services-sqlite = ["opendal/services-sqlite"]
services-surrealdb = ["opendal/services-surrealdb"]
services-swift = ["opendal/services-swift"]
services-tikv = ["opendal/services-tikv"]
services-upyun = ["opendal/services-upyun"]
services-vercel-artifacts = ["opendal/services-vercel-artifacts"]
services-vercel-blob = ["opendal/services-vercel-blob"]
services-webdav = ["opendal/services-webdav"]
services-webhdfs = ["opendal/services-webhdfs"]
services-yandex-disk = ["opendal/services-yandex-disk"]

layers-logging = ["opendal/layers-logging"]
layers-mime-guess = ["opendal/layers-mime-guess"]
layers-throttle = ["opendal/layers-throttle"]
layers-timeout = ["opendal/layers-timeout"]

[dependencies]
anyhow = { version = "1.0.100" }
jni = { version = "0.21.1" }
# this crate won't be published, we always use the local version
opendal = { version = ">=0", path = "../../core", features = ["blocking"] }
tokio = { version = "1.28.1", features = ["full"] }

# This is not optimal. See also the Cargo issue:
# https://github.com/rust-lang/cargo/issues/1197#issuecomment-1641086954
[target.'cfg(unix)'.dependencies.opendal]
features = [
  # Depend on "openssh" which depends on "tokio-pipe" that is unavailable on Windows.
  "services-sftp",
]
path = "../../core"
